--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
   <link rel="stylesheet" href="stylesheet/style.css">
 </head>
 <body>
-  <section class="banner-container">
+  <section class="banner-bg">
     <div class="banner">
         <div class="hero-bg">
             <img src="assets/Group.png" alt="">
             <div class="banner-description">
-                <h1>"In the near future, I hope to <br> become a Developer."</h1>
-                <p class="para-color">I am learning HTML, CSS, javaScript, framework like react and determined to be an organized developer</p>
+                <h1>"My dream to be a skillfull developer <br> as early as possible."</h1>
+                <p class="paragraph-text">I am on the way of learning basic HTML, CSS, javaScript with framework react and library three js <br> and eagerd to be a skillfull programmer</p>
                 <button id="scrollBtn">Contact with me</button>
             </div>
         </div>
