added middle parts

--- a/index.html
+++ b/index.html
@@ -14,10 +14,33 @@
             <div class="banner-description">
                 <h1>"My dream to be a skillfull developer <br> as early as possible."</h1>
                 <p class="paragraph-text">I am on the way of learning basic HTML, CSS, javaScript with framework react and library three js <br> and eagerd to be a skillfull programmer</p>
-                <button id="scrollBtn">Contact with me</button>
+                <button class="scrollBtn">Contact with me</button>
             </div>
         </div>
     </div>
+</section>
+
+<section class="middle">
+  <div class="inspiration-part">
+    <h2>My Inspiration</h2>
+    <p>By being a good developer will create a greater future in my life, which will be meaningful, enjoyable life </p>
+  </div>
+
+  <div class="main-title">
+    <h2>Why Web development ??</h2>
+    <p>Web development profession brings stable, dimandable, constantly growing career which is enjoyable for creative person </p>
+  </div>
+  <div class="middle-1">
+  <div class="middle-1-des">
+    <h2 > I will Do Coding and <br> Change the World</h2>
+    <p> If we change the world, world will be changed</p>
+    <button class="general-button">Learn more</button>
+  </div>
+  
+  <div>
+    <img src="assets/Layer_1.png" alt="">
+  </div>
+</div>
 </section>
 </body>
 </html>
