--- a/index.html
+++ b/index.html
@@ -41,6 +41,41 @@
     <img src="assets/Layer_1.png" alt="">
   </div>
 </div>
+
+<div class="middle-1">
+  <div>
+    <img src="assets/Group 3.png" alt="">
+  </div>
+  <div class="middle-1-des">
+    <h2 > I will help people by creatin <br> modern website</h2>
+    <p> If we create modern website for people it will help them to get right information at right time</p>
+    <button class="general-button">Learn more</button>
+  </div>
+  
+</div>
+<div class="middle-1">
+  <div class="middle-1-des">
+    <h2 > I will contribute to build up
+      modern the World</h2>
+    <p>In modern days we can not imagine any sector which is not involved with websites, it makes people life easier</p>
+    <button class="general-button">Learn more</button>
+  </div>
+  
+  <div>
+    <img src="assets/Layer_1.png" alt="">
+  </div>
+</div>
+</section>
+
+<section class="inspiration-part-2">
+  <div class="inspiration-vedio">
+      <h2 >My Inspiration</h2>
+      <p> Many programmers who inspire me to do hardwork </p>
+  </div>
+  
+  <div class="inspiration-video">
+    <iframe controls width="1050" height="500" src="https://www.youtube.com/embed/tN6oJu2DqCM?si=jofZrSKZ_CnGkH-_" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+</div>
 </section>
 </body>
 </html>
