--- a/index.html
+++ b/index.html
@@ -77,5 +77,40 @@
     <iframe controls width="1050" height="500" src="https://www.youtube.com/embed/tN6oJu2DqCM?si=jofZrSKZ_CnGkH-_" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </div>
 </section>
+
+<section class="current-target">
+  <div class="target-title">
+    <h2>My current target</h2>
+    <p>My present goal is to be a front end developer learning with html, css, javaScript and learnig library, farmework like react, nodejs</p>
+  </div>
+
+  <div class="target-parts">
+    <div class="skills skill-1">
+      <img src="assets/html.png" alt="">
+      <h2>HTML</h2>
+      <p> HTML is the language used to create Web pages for display in Web Browsers</p>
+      <p><a href="">Learn here</a></p>
+    </div>
+    <div class="skills skill-2" >
+    <img src="assets/css.png" alt="">
+      <h2>HTML</h2>
+      <p> HTML is the language used to create Web pages for display in Web Browsers</p>
+      <p><a href="">Learn here</a></p>
+    </div>
+    <div class="skills skill-3">
+      <img src="assets/js.png" alt="">
+        <h2>HTML</h2>
+        <p> HTML is the language used to create Web pages for display in Web Browsers</p>
+        <p><a href="">Learn here</a></p>
+      </div>
+
+  </div>
+</section>
+
+<Section>
+  <div class="submission">
+    <h2>Assignment submitted by Md. Al-Amin</h2>
+  </div>
+</Section>
 </body>
 </html>
